2008-01-25  Jonh Wendell <jwendell@gnome.org>

	* src/vinagre-notebook.c: Adjust the size of tabs.

2008-01-24  Jonh Wendell <jwendell@gnome.org>

	* data/vinagre.desktop.in.in: Removed 'OnlyShowIn' line (LP: #185707)

2008-01-24  Jonh Wendell <jwendell@gnome.org>

	* configure.ac,
	* src/vinagre-main.c,
	* src/vinagre-connection.c
	* src/vinagre-commands.c: Use gio instead of gnome-vfs.

2008-01-20  Jonh Wendell <jwendell@gnome.org>

	* src/vnagre-tab.c (open_vnc): Don't use new symbol from gtk-vnc trunk.
	Closes #509993.

2008-01-15  Jonh Wendell <jwendell@gnome.org>

	* data/vinagre.1,
	* data/Makefile.am: Added a manual page, thanks to Emilio Pozuelo Monfort.
	Closes #509490.

2007-12-19  Jonh Wendell <jwendell@gnome.org>

	* lots of files: Initial documentation skeleton, patch from Jaap A. Haitsma,
	  important step to fix bug #503806.

2007-12-15  Jonh Wendell <jwendell@gnome.org>
	* src/vinagre-commands.c:
	Make links in about dialog clickable. Closes #503770
	Thanks to Jaap A. Haitsma for the patch.

2007-12-14  Jonh Wendell <jwendell@gnome.org>
	Small adjusts in .desktop files. Closes #503650

2007-12-13  Jonh Wendell <jwendell@gnome.org>
	* src/vinagre-window.c (create_menu_bar_and_toolbar):
	Flag some toolbar buttons as "important". Closes #503468

2007-12-13  Jonh Wendell <jwendell@gnome.org>
	* configure.ac: Dropped -Wall, fix suncc compile, closes #503358
	  Thanks to Halton Huo.

==================== 0.3 ====================

2007-12-12  Jonh Wendell <jwendell@gnome.org>
	pre-release bump version to 0.4

2007-11-11  Jonh Wendell <jwendell@gnome.org>

	Vinagre has its own icon!
	Thanks to Vinicius Depizzol for the artwork and Michael Monreal for
	the integration patch. Closes #489145.
	
	* configure.ac,
	* data/Makefile.am: Changed some rules
	* data/icons: THE new directory
	* src/vinagre-commands.c: Put vdepizzol's name under credits

2007-11-07  Jonh Wendell <jwendell@gnome.org>

	* src/vinagre-utils.[ch],
	* src/vinagre-main.c,