@@ -1,3 +1,9 @@
+2008-01-27  Jonh Wendell <jwendell@gnome.org>
+
+	* src/vinagre-window.c,
+	* src/vinagre-window-private.h: Fix a crash in delete_event,
+	by disconnecting from the clipboard signal.
+
 2008-01-25  Jonh Wendell <jwendell@gnome.org>
 
 	* src/vinagre-notebook.c: Adjust the size of tabs.
